# aegis-vault

./: .env.example  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  keypair.rs  lib.rs  main.rs  password.rs  vault.rs  vault_meta.rs
src/components/: app-layout.tsx  auth-screen.tsx  entry-card.tsx  entry-dialog.tsx  generator-page.tsx  google-vault-password-screen.tsx  key-backup-screen.tsx  key-import-screen.tsx  password-generator.tsx  pending-shares-dialog.tsx  settings-dialog.tsx  totp-verify-screen.tsx  vault-selector.tsx  vault-settings-dialog.tsx  vault-view.tsx  window-title-bar.tsx
src/components/dashboard/: category-breakdown.tsx  dashboard-page.tsx  recent-entries.tsx  security-insights.tsx  security-overview.tsx  stat-card.tsx
src/contexts/: auth-context.tsx  vault-context.tsx  vault-list-context.tsx
src/i18n/: en.ts  index.tsx  pt-BR.ts
src/lib/: dashboard-analytics.ts  entry-schemas.ts  password-strength.ts
src/types/: index.ts
