[package]
name = "pass"
version = "0.1.0"
description = "A secure password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "pass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
futures = "0.3"
