[package]
name = "pass"
version = "0.2.0"
description = "Aegis Vault - A secure password manager"
authors = ["leonardoReizz"]
edition = "2021"

[lib]
name = "pass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
totp-rs = { version = "5", features = ["qr"] }
url = "2"
tokio = { version = "1", features = ["net", "time", "io-util", "macros"] }
